@startuml

title __TRACKI_MASTER's Class Diagram__\n

  package com.example.aflah.tracki_master {
    class App {
        {static} - TAG : String
        - regionBootstrap : RegionBootstrap
        - backgroundPowerSaver : BackgroundPowerSaver
        - beaconManager : BeaconManager
        + onCreate()
        + didEnterRegion()
        + didExitRegion()
        + didDetermineStateForRegion()
    }
  }
  

  package com.example.aflah.tracki_master {
    class DateDialog {
        ~ txtDate : EditText
        + DateDialog()
        + onCreateDialog()
        + onDateSet()
    }
  }
  

  package com.example.aflah.tracki_master {
    class Injection {
        {static} + provideProductRepository()
        {static} + providePromotionRepository()
        {static} + provideReviewRepository()
        {static} + provideDetailPromoRepository()
        {static} + provideStoreRepository()
        {static} + provideUserRepository()
    }
  }
  

  package com.example.aflah.tracki_master {
    class NavigationActivity {
        {static} - TAG : String
        - fragmentTransaction : FragmentTransaction
        - cubeacon : Cubeacon
        - data : List<Map<String, String>>
        - beacons : List<CBBeacon>
        ~ sharedPreferences : SharedPreferences
        ~ fragmentSelect : Integer
        ~ accountFragmentId : int
        - mOnNavigationItemSelectedListener : OnNavigationItemSelectedListener
        # onCreate()
        # onResume()
        # onPause()
        # onDestroy()
        + onNavigationItemSelected()
        + onFragmentInteraction()
        + didRangeBeaconsInRegion()
        + onBeaconServiceConnect()
    }
  }
  

  package com.example.aflah.tracki_master {
    interface OnCubeaconUpdated {
        {abstract} + setData()
    }
  }
  

  package com.example.aflah.tracki_master {
    class PreferenceManager {
        ~ pref : SharedPreferences
        ~ editor : Editor
        ~ _context : Context
        ~ PRIVATE_MODE : int
        {static} - PREF_NAME : String
        {static} - IS_FIRST_TIME_LAUNCH : String
        # onCreate()
        + PreferenceManager()
        + setFirstTimeLaunch()
        + isFirstTimeLaunch()
    }
  }
  

  package com.example.aflah.tracki_master {
    class setting {
        # onCreate()
    }
  }
  

  App -up-|> BootstrapNotifier
  App -up-|> Application
  DateDialog -up-|> OnDateSetListener
  DateDialog -up-|> DialogFragment
  InstantiationException -up-|> AndroidRuntimeException
  SavedState -up-|> Parcelable
  NavigationActivity -up-|> OnNavigationItemSelectedListener
  NavigationActivity -up-|> OnFragmentInteractionListener
  NavigationActivity -up-|> CBRangingListener
  NavigationActivity -up-|> CBServiceListener
  NavigationActivity -up-|> AppCompatActivity
  NavigationActivity o-- HomeFragment : homeFragment
  NavigationActivity o-- AccountFragment : accountFragment
  NavigationActivity o-- PromoFragment : promoFragment
  NavigationActivity o-- OnCubeaconUpdated : mOnCubeaconUpdated
  NavigationActivity +-down- OnCubeaconUpdated
  HostCallbacks -up-|> FragmentHostCallback
  PreferenceManager -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  setting -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
